--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@
     justify-content: center;
     padding: 50px 0;
     background-color: var(--secondary-color);
+   
   }
   
   .hero-container {
@@ -82,6 +83,7 @@
     flex-direction: row;
     align-items: center;
     gap: 20px;
+    height: 100svh;
   }
   
   .hero-text {
@@ -111,6 +113,7 @@
   .services {
     padding: 50px 0;
     text-align: center;
+    height: 50svh;
   }
   
   .services h3 {
